hphp/test/zend/good/bug32833.php
<?php 
$test = array();
$test[] .= "ok\n";
echo $test[0];
?>